--- a/css/queries.css
+++ b/css/queries.css
@@ -101,39 +101,37 @@
     display: flex;
   }
 
-  .container,
-  .project-details {
+  .container {
     margin: 0 auto;
     width: 90%;
   }
 
-  #works-section {
-    background: #fff;
-  }
-
-  .project-details {
+  #works-section > div.container {
     display: grid;
     grid-template-areas:
+      "top top"
       "hype hype"
       "one two"
       "three four"
       "five six";
+    background: #fff;
     gap: 24px;
   }
 
-  .works-top {
+  div.container .works-top {
     display: flex;
+    grid-area: top;
     justify-content: space-between;
-    text-align: center;
+    text-align: left;
     gap: 24px;
-    width: 90%;
+    width: 100%;
   }
 
   .recent-works {
     color: #091e42;
     line-height: 3.25rem;
     text-align: left;
-    max-width: 315px;
+    width: 315px;
     height: 52px;
   }
 
@@ -142,7 +140,7 @@
     max-width: 100%;
     width: 70%;
     height: 0;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 
   div.multi-post {
@@ -218,7 +216,7 @@
   }
 
   .pro-layer {
-    padding: 178px 0 14px 16px;
+    padding: 178px 16px 14px 16px;
     width: 100%;
     height: auto;
     background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%);
@@ -312,9 +310,19 @@
     border-bottom: 1px solid #dbd8d7;
   }
 
-  form {
+  input,
+  textarea {
+    max-width: 298px;
+    margin: 14px 72px;
+  }
+
+  form#lg-screen {
+    display: inline;
     margin-top: 0;
-    text-align: left;
+  }
+
+  .desk-only textarea {
+    min-width: 298px;
   }
 
   .contact-btn {
@@ -323,7 +331,7 @@
   }
 
   hr.form-line {
-    display: none;
+    color: #dbd8d7;
   }
 
   .project.one {
@@ -389,8 +397,9 @@
     background-position: top -60px right -20px;
   }
 
-  .project-details {
+  #works-section > div.container {
     grid-template-areas:
+      "top top top"
       "hype hype hype"
       "one two three"
       "four five six";
@@ -436,13 +445,21 @@
     margin: 0 auto;
   }
 
-  form {
-    padding: 0 0 124px 0;
-    width: 70%;
-    text-align: left;
+  form#lg-screen input {
+    margin: 1rem;
+    max-width: 325px;
   }
 
-  form textarea {
+  form#lg-screen input[type=email] {
+    max-width: 684px;
+  }
+
+  form#lg-screen {
+    padding: 0 0 124px 0;
+    width: 70%;
+  }
+
+  form.desk-only textarea {
     min-width: 684px;
     margin: 0 16px 8px 16px;
   }
@@ -450,58 +467,4 @@
   .contact-btn {
     margin-left: 16px;
   }
-}
-
-/* Modal Styling */
-.modal-ctn {
-  margin: 5% auto;
-  padding: 2rem 1.5rem 1.85rem 1.5rem;
-  width: 80%;
-  height: 80%;
-}
-
-.title-one {
-  font-family: 'Crete round', sans-serif;
-  font-weight: 400;
-}
-
-.pivot-ctn {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  color: #344563;
-  height: 80%;
-  gap: 25px;
-}
-
-.modal-skills {
-  margin-top: 12px;
-  margin-bottom: 20px;
-}
-
-.project-snapshot {
-  width: 180%;
-  height: auto;
-  margin: 0.8rem 0 1.5rem 0;
-}
-
-.grp-textsBtn {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  max-height: 448px;
-}
-
-.button-grp {
-  margin-top: 0;
-  justify-content: flex-start;
-  gap: 12px;
-}
-
-.modal-texts {
-  max-height: 336px;
-  width: 100%;
-  overflow: hidden;
-  line-height: 30px;
 }
