--- a/css/main.css
+++ b/css/main.css
@@ -187,17 +187,13 @@ div.container .works-top {
 }
 
 section.sect-container {
-  padding: 7.5rem 1.5rem 8.125rem 1.5rem;
-}
-
-section.sect-container > .container {
-  position: relative;
+  padding: 7.5rem 0 8.125rem 0;
 }
 
 .inline-hr {
-  margin: 24px 0 80px 0;
+  margin: 24px 1.5rem 80px 1.5rem;
   color: #212121;
-  width: 100%;
+  padding: 0 1.5rem;
 }
 
 .multi-post {
@@ -316,6 +312,8 @@ button:active {
   background-repeat: no-repeat;
   background-position: 100% 395px;
   width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .abt-txt {
@@ -385,6 +383,8 @@ div > .tools::before {
 .contact-form {
   display: flex;
   flex-direction: column;
+  justify-content: stretch;
+  align-items: flex-start;
   width: 100%;
   margin: 0 auto;
   text-align: center;
@@ -401,7 +401,7 @@ div > .tools::before {
 }
 
 form {
-  margin-top: 73px;
+  margin: 73px auto 0 auto;
   padding-bottom: 124px;
 }
 
@@ -417,8 +417,9 @@ textarea {
   font-size: 0.9rem;
   line-height: 1.5rem;
   width: 100%;
-  margin: 14px 16px;
+  margin: 14px 0;
   border: none;
+  padding: 12px;
 }
 
 textarea {
@@ -432,6 +433,12 @@ textarea {
 .contact-btn {
   width: 131px;
   height: 48px;
+}
+
+.error-index {
+  margin-top: 1rem;
+  font-weight: 700;
+  font-size: 0.8rem;
 }
 
 hr.form-line {
@@ -474,8 +481,11 @@ hr#br {
   top: 0;
   left: 0;
   right: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
+  padding: 0 1rem;
+  height: 100vh;
+  max-height: 728px;
   margin: 0 auto;
   backdrop-filter: blur(5px);
   background-color: rgba(22, 19, 19, 0.9);
@@ -484,7 +494,7 @@ hr#br {
 }
 
 .modalExit {
-  transition: width 1s ease-in-out, hieght 1s ease-in-out;
+  transition: width 1s ease-in-out, height 1s ease-in-out;
   cursor: pointer;
   margin-right: 1rem;
 }
@@ -498,6 +508,7 @@ hr#br {
   margin: 1rem auto;
   padding: 2rem 1rem 1.25rem 1rem;
   width: 95%;
+  height: auto;
 }
 
 .modal-header-ctn {
@@ -534,17 +545,16 @@ hr#br {
   flex-direction: column;
   width: 100%;
   color: #091e42;
+  height: auto;
 }
 
 .project-snapshot {
-  width: 100%;
+  max-width: 100%;
   height: auto;
-  margin: 0.8rem 0 1.5rem 0;
 }
 
 .button-grp {
-  position: relative;
-  margin: 16px 0;
+  margin-top: 16px;
   display: flex;
   justify-content: space-between;
   gap: 12px;
