--- a/css/queries.css
+++ b/css/queries.css
@@ -103,7 +103,6 @@
 
   .container,
   .project-details {
-    margin: 0 auto;
     width: 90%;
   }
 
@@ -312,19 +311,9 @@
     border-bottom: 1px solid #dbd8d7;
   }
 
-  input,
-  textarea {
-    max-width: 298px;
-    margin: 14px 72px;
-  }
-
-  form#lg-screen {
-    display: inline;
+  form {
+    text-align: left;
     margin-top: 0;
-  }
-
-  .desk-only textarea {
-    min-width: 298px;
   }
 
   .contact-btn {
@@ -333,7 +322,7 @@
   }
 
   hr.form-line {
-    color: #dbd8d7;
+    display: none;
   }
 
   .project.one {
@@ -358,6 +347,58 @@
 
   .project.six {
     grid-area: six;
+  }
+
+  /* Modal Styling @768px min-width */
+  .modal-ctn {
+    margin: 5% auto;
+    padding: 2rem 1.5rem 1.85rem 1.5rem;
+    max-width: 85%;
+  }
+
+  .modal-header-ctn {
+    height: 2rem;
+  }
+
+  /* .title-one {
+    font-family: 'Crete round', sans-serif;
+    font-weight: 400;
+  } */
+
+  .pivot-ctn {
+    flex-direction: row;
+    color: #344563;
+    width: 100%;
+    height: 80%;
+    gap: 25px;
+  }
+
+  .modal-skills {
+    margin-top: 12px;
+    margin-bottom: 20px;
+  }
+
+  /* .modal-texts {
+    max-height: 336px;
+    max-width: 424px;
+    overflow: hidden;
+    line-height: 30px;
+  } */
+
+  .grp-textsBtn {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    max-height: 460px;
+  }
+
+  .button-grp {
+    margin-top: 2rem;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 12px;
   }
 }
 
@@ -443,82 +484,13 @@
     gap: 96px;
     text-align: left;
     padding: 0;
+    padding-left: 2rem;
     margin: 0 auto;
   }
 
-  form#lg-screen input {
-    margin: 1rem;
-    max-width: 325px;
-  }
-
-  form#lg-screen input[type=email] {
-    max-width: 684px;
-  }
-
-  form#lg-screen {
+  form {
     padding: 0 0 124px 0;
-    width: 70%;
-  }
-
-  form.desk-only textarea {
-    min-width: 684px;
-    margin: 0 16px 8px 16px;
-  }
-
-  .contact-btn {
-    margin-left: 16px;
+    width: 50%;
+    text-align: left;
   }
 }
-
-/* Modal Styling */
-.modal-ctn {
-  margin: 5% auto;
-  padding: 2rem 1.5rem 1.85rem 1.5rem;
-  width: 80%;
-  height: 80%;
-}
-
-.title-one {
-  font-family: 'Crete round', sans-serif;
-  font-weight: 400;
-}
-.pivot-ctn {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  color: #344563;
-  height: 80%;
-  gap: 25px;
-}
-
-.modal-skills {
-  margin-top: 12px;
-  margin-bottom: 20px;
-}
-
-.project-snapshot {
-  width: 180%;
-  height: auto;
-  margin: 0.8rem 0 1.5rem 0;
-}
-
-.grp-textsBtn {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  max-height: 448px;
-}
-
-.button-grp {
-  margin-top: 0;
-  justify-content: flex-start;
-  gap: 12px;
-}
-
-/* .modal-texts {
-  max-height: 336px;
-  width: 100%;
-  overflow: hidden;
-  line-height: 30px;
-} */
