--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ body {
   font-family: 'Inter', sans-serif;
   color: #fff;
   line-height: 1.5rem;
-  max-height: 100vh;
   width: 100%;
   margin: 0 auto;
 }
@@ -484,7 +483,7 @@ hr#br {
   bottom: 0;
   width: 100%;
   padding: 0 1rem;
-  height: 100vh;
+  height: 100%;
   max-height: 728px;
   margin: 0 auto;
   backdrop-filter: blur(5px);
@@ -505,7 +504,7 @@ hr#br {
 
 .modal-ctn {
   background-color: #fff;
-  margin: 1rem auto;
+  margin: 2rem auto;
   padding: 2rem 1rem 1.25rem 1rem;
   width: 95%;
   height: auto;
