--- a/css/queries.css
+++ b/css/queries.css
@@ -103,7 +103,8 @@
 
   .container,
   .project-details {
-    width: 90%;
+    margin: 0 auto;
+    width: 100%;
   }
 
   #works-section {
@@ -312,8 +313,8 @@
   }
 
   form {
-    text-align: left;
     margin-top: 0;
+    text-align: left;
   }
 
   .contact-btn {
@@ -347,58 +348,6 @@
 
   .project.six {
     grid-area: six;
-  }
-
-  /* Modal Styling @768px min-width */
-  .modal-ctn {
-    margin: 7rem auto;
-    padding: 2rem 1.5rem 1.85rem 1.5rem;
-    max-width: 85%;
-  }
-
-  .modal-header-ctn {
-    height: 2rem;
-  }
-
-  .title-one {
-    font-family: 'Crete round', sans-serif;
-    font-weight: 400;
-  }
-
-  .pivot-ctn {
-    flex-direction: row;
-    color: #344563;
-    width: 100%;
-    height: 80%;
-    gap: 25px;
-  }
-
-  .modal-skills {
-    margin-top: 12px;
-    margin-bottom: 20px;
-  }
-
-  .modal-texts {
-    max-height: 336px;
-    max-width: 424px;
-    overflow: hidden;
-    line-height: 30px;
-  }
-
-  .grp-textsBtn {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    max-height: 460px;
-  }
-
-  .button-grp {
-    margin-top: 2rem;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 12px;
   }
 }
 
@@ -484,13 +433,66 @@
     gap: 96px;
     text-align: left;
     padding: 0;
-    padding-left: 2rem;
     margin: 0 auto;
   }
 
   form {
-    padding: 0 0 124px 0;
+    padding: 0 1.5rem 124px 0;
     width: 50%;
     text-align: left;
   }
+}
+
+/* Modal Styling */
+.modal-ctn {
+  margin: 5% auto;
+  padding: 2rem 1.5rem 1.85rem 1.5rem;
+  width: 80%;
+  height: 80%;
+}
+
+.title-one {
+  font-family: 'Crete round', sans-serif;
+  font-weight: 400;
+}
+
+.pivot-ctn {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  color: #344563;
+  height: 80%;
+  gap: 25px;
+}
+
+.modal-skills {
+  margin-top: 12px;
+  margin-bottom: 20px;
+}
+
+.project-snapshot {
+  width: 180%;
+  height: auto;
+  margin: 0.8rem 0 1.5rem 0;
+}
+
+.grp-textsBtn {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  max-height: 448px;
+}
+
+.button-grp {
+  margin-top: 0;
+  justify-content: flex-start;
+  gap: 12px;
+}
+
+.modal-texts {
+  max-height: 336px;
+  width: 100%;
+  overflow: hidden;
+  line-height: 30px;
 }
