--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Inter', sans-serif;
   color: #fff;
   line-height: 1.5rem;
+  max-height: 100vh;
   width: 100%;
   margin: 0 auto;
 }
@@ -189,10 +190,14 @@ section.sect-container {
   padding: 7.5rem 0 8.125rem 0;
 }
 
+section.sect-container > .container {
+  position: relative;
+}
+
 .inline-hr {
-  margin: 24px 1.5rem 80px 1.5rem;
+  margin: 24px 0 80px 0;
   color: #212121;
-  padding: 0 1.5rem;
+  width: 100%;
 }
 
 .multi-post {
@@ -375,8 +380,7 @@ div > .tools::before {
 
 #contact-section {
   background-color: #fff;
-  padding-top: 120px;
-  padding-bottom: 8px;
+  padding: 120px 1.8rem 8px 1.8rem;
 }
 
 .contact-form {
@@ -384,7 +388,7 @@ div > .tools::before {
   flex-direction: column;
   justify-content: stretch;
   align-items: flex-start;
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   text-align: center;
   padding: 0 24px;
@@ -402,6 +406,7 @@ div > .tools::before {
 form {
   margin: 73px auto 0 auto;
   padding-bottom: 124px;
+  width: 100%;
 }
 
 textarea[placeholder] {
@@ -424,7 +429,6 @@ textarea {
 textarea {
   margin: 14px 0;
   height: 114px;
-  padding: 12px;
   color: #3c3a39;
   background-color: #fbf8f7;
 }
@@ -480,11 +484,8 @@ hr#br {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   width: 100%;
-  padding: 0 1rem;
   height: 100%;
-  max-height: 728px;
   margin: 0 auto;
   backdrop-filter: blur(5px);
   background-color: rgba(22, 19, 19, 0.9);
@@ -493,7 +494,7 @@ hr#br {
 }
 
 .modalExit {
-  transition: width 1s ease-in-out, height 1s ease-in-out;
+  transition: width 1s ease-in-out, hieght 1s ease-in-out;
   cursor: pointer;
   margin-right: 1rem;
 }
@@ -504,10 +505,9 @@ hr#br {
 
 .modal-ctn {
   background-color: #fff;
-  margin: 2rem auto;
+  margin: 1rem auto;
   padding: 2rem 1rem 1.25rem 1rem;
   width: 95%;
-  height: auto;
 }
 
 .modal-header-ctn {
@@ -544,16 +544,17 @@ hr#br {
   flex-direction: column;
   width: 100%;
   color: #091e42;
-  height: auto;
 }
 
 .project-snapshot {
-  max-width: 100%;
+  width: 100%;
   height: auto;
+  margin: 0.8rem 0 1.5rem 0;
 }
 
 .button-grp {
-  margin-top: 16px;
+  position: relative;
+  margin: 16px 0;
   display: flex;
   justify-content: space-between;
   gap: 12px;
